@import_move_to_application.scss

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,6 @@
 @import "./reset";
 @import "font-awesome";
 @import "clearfix";
+@import "chat-main";
+@import "chat-groups";
 @import "style.scss";
