--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -1,13 +1,16 @@
+$main_color: #fff;
+$button_color: #38aef0;
+
 .account-page {
-  .account-page__inner {
+  &__inner {
     width: 980px;
     margin: 60px auto;
     padding: 60px;
-    background-color: #fff;
+    background-color: $main_color;
     border: 1px solid #ddd;
     border-radius: 5px;
 
-    .account-page__inner--left, .account-page__inner--right {
+    &--left, &--right {
       float: left;
       width: 50%;
     }
@@ -30,7 +33,7 @@
         display: block;
         width: 60px;
         margin-top: 5px;
-        border-bottom: 1px solid #38aef0;
+        border-bottom: 1px solid $button_color;
       }
     }
 
@@ -42,7 +45,7 @@
 
     .btn {
       margin-top: 20px;
-      color: #fff;
+      color: $main_color;
       background-color: #ccc;
       font-size: 14px;
     }
@@ -85,8 +88,8 @@
   input[type='submit'] {
     float: left;
     margin-top: 20px;
-    color: #fff;
-    background-color: #38aef0;
+    color: $main_color;
+    background-color: $button_color;
   }
 
   .field-label {
