Omit_application.scss

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,6 +3,6 @@
 @import "clearfix";
 @import "chat-main";
 @import "chat-groups";
-@import "style.scss";
-@import "color.scss";
-@import "user.scss";
+@import "style";
+@import "color";
+@import "user";
