Edit_style.scss

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -82,7 +82,7 @@ body{
           display: inline-block;
           margin: 15px 0 15px 3px;
           line-height: 28px;
-          color: #fff;
+          color: $section-color;
           font-size: 20px;
           .fa {
             line-height: 60px;
