--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,6 +3,7 @@
 @import "clearfix";
 @import "chat-main";
 @import "chat-groups";
+@import "chat-user";
 @import "style";
 @import "color";
 @import "user";
