Create_flash_messages

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,6 +4,7 @@
 @import "chat-main";
 @import "chat-groups";
 @import "chat-user";
+@import "flash-messages";
 @import "style";
 @import "color";
 @import "user";
