--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -6,5 +6,10 @@
 @import "chat-user";
 @import "flash-messages";
 @import "style";
+@import "chat-group__errors";
+@import "chat-group-form__field";
+@import "chat-group-user";
+@import "chat-group-form__action-btn";
+@import "group";
 @import "color";
 @import "user";
