--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -59,14 +59,15 @@ body{
 @include flash-messages();
 
 .chat {
+  min-width: 980px;
   height: 100%;
-  .chat-side{
-    float: left;
-    height: 100%;
-    width: 300px;
-    background-color: #2f3e51;
-    @include chat-user();
-    @include chat-groups();
-  }
-  @include chat-main();
 }
+.chat-side{
+  float: left;
+  width: 300px;
+  height: 100%;
+  background-color: #2f3e51;
+}
+@include chat-user();
+@include chat-groups();
+@include chat-main();
