--- a/app/views/groups/new.html.haml
+++ b/app/views/groups/new.html.haml
@@ -3,24 +3,18 @@
   = form_for(@groups) do |f|
     .chat-group-form__field.clearfix
       .chat-group-form__field--left
-        = f.label :name, "グループ名", class: "chat-group-form__label"
+        = f.label :group_name, "グループ名", class: "chat-group-form__label"
       .chat-group-form__field--right
         = f.text_field :group_name, placeholder: "グループ名を入力してください", id: "group_name", class: "chat-group-form__input"
     .chat-group-form__field.clearfix
       .chat-group-form__field--left
-        = f.label "チャットメンバーを追加", class: "chat-group-form__label"
-      .chat-group-form__field--right
-        .chat-group-form__search.clearfix
-          = f.text_field :user_id, placeholder: "追加したいユーザー名を入力してください", id: "user-search-field", class: "chat-group-form__input"
-        #user-search-result
-    .chat-group-form__field.clearfix
-      .chat-group-form__field--left
         = f.label "チャットメンバー", class: "chat-group-form__label"
+
       .chat-group-form__field--right
         #chat-group-users
           #chat-group-user-22.chat-group-user.clearfix
-            = f.text_field :user_id, type: "hidden", value: "22"
-            %p.chat-group-user__name seo_kyohei
+            = collection_check_boxes(:group, :user_ids, User.all, :id, :name) do |t|
+              - t.label { t.check_box + t.text }
     .chat-group-form__field.clearfix
       .chat-group-form__field--left
       .chat-group-form__field--right
