Edit_new.html.haml_collection_check_boxes

--- a/app/views/groups/new.html.haml
+++ b/app/views/groups/new.html.haml
@@ -13,7 +13,7 @@
       .chat-group-form__field--right
         #chat-group-users
           #chat-group-user-22.chat-group-user.clearfix
-            = collection_check_boxes(:group, :user_ids, User.all, :id, :name) do |t|
+            = f.collection_check_boxes(:user_ids, User.where.not(name: current_user.name), :id, :name) do |t|
               - t.label { t.check_box + t.text }
     .chat-group-form__field.clearfix
       .chat-group-form__field--left
