--- a/app/assets/stylesheets/_reset.scss
+++ b/app/assets/stylesheets/_reset.scss
@@ -132,3 +132,6 @@
             -ms-box-sizing: border-box;
                 box-sizing: border-box;
     }
+    a {
+    text-decoration: none;
+    }
