--- a/app/assets/stylesheets/_chat-main.scss
+++ b/app/assets/stylesheets/_chat-main.scss
@@ -49,6 +49,7 @@
       position: relative;
       height: calc(100% - 190px);
       overflow-y: scroll;
+      padding: 30px 0;
       .chat-messages {
         position: absolute;
         right: 40px;
@@ -83,7 +84,6 @@
       right: 0;
       bottom: 0;
       left: 0;
-      height: 50px;
       padding: 20px 40px;
       background-color: #ddd;
       .chat-footer__body {
@@ -92,6 +92,7 @@
         height: 50px;
         position: relative;
         textarea {
+          padding: 15px 10px;
           width: 100%;
           height: 50px;
           line-height: 20px;
