--- a/app/views/layouts/_chat_side_groups.html.haml
+++ b/app/views/layouts/_chat_side_groups.html.haml
@@ -1,4 +1,4 @@
-= link_to group_top_index_path(group), class: 'chat-group__link'  do
+= link_to group_messages_path(group), class: 'chat-group__link'  do
   %p.chat-group__name
     = group.name
   %p.chat-group__message
