--- a/app/views/groups/new.html.haml
+++ b/app/views/groups/new.html.haml
@@ -1,6 +1,6 @@
 .chat-group-form
   %h1 新規チャットグループ
-  = form_for(@groups) do |f|
+  = form_for(@group) do |f|
     .chat-group-form__field.clearfix
       .chat-group-form__field--left
         = f.label :name, "グループ名", class: "chat-group-form__label"
