--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -13,15 +13,7 @@
           = link_to "Edit", edit_group_path(@group) ,class: "chat-header--right__edit-btn"
       .chat-body
         %ul.chat-messages
-          - @messages.each do |message|
-            %li.chat-message
-              .chat-message__header.clearfix
-                %p.chat-message__header--name
-                  = message.user.name
-                %p.chat-message__header--time
-                  = message.created_at
-              %p.chat-message__body
-                = message.body
+          = render 'layouts/chat_message'
       .chat-footer
         = form_for(@message,url: "messages") do |f|
           .new_message
