--- a/app/assets/stylesheets/_chat-group-user.scss
+++ b/app/assets/stylesheets/_chat-group-user.scss
@@ -4,13 +4,13 @@
     line-height: 50px;
     font-size: 14px;
     border-bottom: 1px solid #ddd;
+    text-align: right;
 
     &__name {
       float: left;
     }
 
     &__btn {
-      float: right;
       display: inline-block;
       cursor: pointer;
 
