--- a/app/views/groups/new.html.haml
+++ b/app/views/groups/new.html.haml
@@ -22,8 +22,9 @@
           #chat-group-users
             - @group.users.each do |user|
               .chat-group-user.clearfix{ id: "chat-group-user-#{user.id}" }
-                %input{ type: "hidden", name: "chat_group[user_ids][]", value: user.id }
-                %p.chat-group-user__name= user.name
+                = f.hidden_field "chat_group[user_ids][]", value: user.id
+                %p.chat-group-user__name
+                  = user.name
 
 
     .chat-group-form__field.clearfix
