--- a/app/views/layouts/_new_message_form.html.haml
+++ b/app/views/layouts/_new_message_form.html.haml
@@ -1,5 +1,9 @@
-= form_for(@message,url: "messages", class: 'new_message' ) do |f|
+= form_for(@message,url: "messages") do |f|
   .chat-footer__body
     = f.text_area :body, placeholder: "type a message"
+    %label.chat-footer__file
+      = f.file_field :image
+      %i.fa.fa-image
   = f.hidden_field :group_id, value: @group.id
-  = f.submit "send"
+  = f.submit "send", id: 'submit'
+
