--- a/app/assets/stylesheets/_chat-group-user.scss
+++ b/app/assets/stylesheets/_chat-group-user.scss
@@ -1,5 +1,6 @@
 @mixin chat-group-user(){
   .chat-group-user {
+    clear: both;
     padding: 0 15px;
     line-height: 50px;
     font-size: 14px;
