--- a/app/assets/stylesheets/_clearfix.scss
+++ b/app/assets/stylesheets/_clearfix.scss
@@ -1,7 +1,9 @@
 @mixin clearfix(){
-  &:after {
-    content: '';
-    display: block;
-    clear: both;
+  .clearfix {
+    &:after {
+      clear: both;
+      content: '';
+      display: block;
+    }
   }
 }
