--- a/app/assets/stylesheets/group.scss
+++ b/app/assets/stylesheets/group.scss
@@ -6,6 +6,7 @@
   border: 1px solid #ddd;
   border-radius: 5px;
   box-sizing: border-box;
+  @include clearfix();
 
   h1 {
     letter-spacing: 2px;
