--- a/app/assets/stylesheets/_chat-main.scss
+++ b/app/assets/stylesheets/_chat-main.scss
@@ -4,6 +4,7 @@
     position: relative;
     width: calc(100% - 300px);
     height: 100%;
+    @include clearfix;
     .chat-header {
       @include clearfix();
       padding-right: 40px;
